test/fail/inheritance/inherit_builtin.lly
#[
SyntaxError: 'integer' cannot be inherited from.
    from inherit_builtin.lly:6
]#

class abc() < integer {  }
